--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_native_splash: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/icons/newlogo.png
 
 dev_dependencies:
   flutter_test:
