--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dev_dependencies:
   cloud_firestore: ^4.4.4
   firebase_core: ^2.7.1
   flutter_svg: ^1.1.6
+  carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
+  flutter_constraintlayout: ^1.6.3-stable
+
 
 
 
@@ -73,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/svgs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
