--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
   flutter_constraintlayout: ^1.6.3-stable
+  intl: any
 
 
 
